<resources>
    <string name="app_name">Appmaskcycle</string>


    <!-- Titulos arriba -->
    <string name="nav_home">Home</string>
    <string name="nav_anadir_disp">Añadir mascarilla</string>
    <string name="nav_info_masc">Información mascarillas</string>
    <string name="nav_detalles">Detalles</string>
    <string name="nav_regis">Crear cuenta</string>
    <string name="nav_manual">Manual</string>
    <string name="nav_ajustes_usr">Ajustes de usuario</string>

    <!-- cadenas -->
    <string name="login_usuario">Usuario</string>
    <string name="login_contra">Contraseña</string>
    <string name="login_contra2">Repetir Contraseña</string>
    <string name="login_contraOld">Contraseña Actual</string>
    <string name="login_contraNew">Contraseña Nueva</string>

    <!-- Informacion mascarillas-->
    <string name="titulo_parrafo1">Mascarillas higiénicas</string>
    <string name="cuerpo_parrafo1">Son una barrera para la transmisión de agentes infecciosos. Protegen desde dentro hacia afuera. Por lo tanto, si se acerca alguien que no lleva mascarilla y tiene Covid–19, la persona que sí lleva la mascarilla puede ser contagiada. Son, pues, mascarillas solidarias. Si todo el mundo las lleva, se evita la propagación del virus. Las hay reutilizables (UNE 0065–2020) y no reutilizables (UNE 0064–2020).</string>
    <string name="tiempo_parrafo1">Tiempo: 4 horas.</string>

    <string name="titulo_parrafo2">Mascarillas quirúrgicas</string>
    <string name="cuerpo_parrafo2">Fueron diseñadas inicialmente para que, durante una operación quirúrgica, el médico no contaminará al enfermo y se protegiera de salpicaduras o sangre. Por tanto, son una protección de dentro hacia afuera (como las higiénicas), pero de fuera hacia adentro solo ofrecen una protección parcial, no total. Su precio máximo es de 0,96 euros. Lo normal es que no se usen más de 4 horas. No las hay reutilizables .</string>
    <string name="tiempo_parrafo2">Tiempo: 4 horas.</string>

    <string name="titulo_parrafo3">Mascarillas autofiltrantes (FFP2)</string>
    <string name="cuerpo_parrafo3">Recomendadas para personal sanitario o personal que vaya a entrar en contacto estrecho con la respiración del paciente. Actúan de barrera de protección en ambos sentidos. Si lo indica con una “R” son reutilizables. Si pone “NR”, no lo son.</string>
    <string name="tiempo_parrafo3">Tiempo: 8 horas.</string>

    <string name="titulo_parrafo4">Mascarillas personalizadas</string>
    <string name="cuerpo_parrafo4">No tienen la eficacia de protección exigida para obtener el certificado de protección bacteriana (superior al 90%) o de respirabilidad. Una opción alternativa es colocar un filtro renovable en el interior, con lo que la mascarilla se convierte en la funda que recubre el filtro homologado que sí actúa como barrera.</string>
    <string name="tiempo_parrafo4">Tiempo: depende de la mascarilla.</string>

    <string name="titulo_parrafo5">Mascarillas reutilizables</string>
    <string name="cuerpo_parrafo5">Pueden emplearse diversos tipos de tejidos: poliéster/algodón, algodón 100% o poliamida. Para obtener el certificado de cumplimiento de la norma UNE 0065, deben tener una eficacia de protección bacteriana superior al 90% y una respirabilidad inferior a 60 Pa/cm2. Estas mascarillas se pueden lavar con detergente normal y agua a temperatura entre 60º y 90º (ciclo normal de lavadora). </string>
    <string name="tiempo_parrafo5">Tiempo: depende de la mascarilla.</string>

    <!-- Manual -->
    <string name="titulo_manual">Manual de usuario de la app</string>

    <string name="manual_add_disp">Para añadir un nuevo paquete de mascarillas a la pantalla de "Disponibles", debe pulsar en el botón (+) desde el "Home". En la pantalla del formulario existen dos maneras de terminar el proceso; rellenando el formulario con los datos del paquete de mascarillas o escaneando el código QR del paquete.</string>

    <string name="manual_add_enuso">Para añadir una mascarilla a la pantalla de "En uso", debe pulsar en el botón de "añadir mascarilla" del paquete en el que se ubique. </string>

    <string name="manual_pausarmasc">Para pausar una mascarilla, debe pulsar el botón amarillo de la mascarilla para que se detenga el contador del tiempo.</string>

    <string name="manual_activarmasc">Para activar una mascarilla, debe pulsar el botón verde de la mascarilla para que el contador del tiempo continue su función.</string>

    <string name="manual_lavarmasc">Para lavar una mascarilla, debe pulsar el botón azul de la mascarilla para que se reinicie el contador de tiempo.</string>

</resources>