<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManualActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvTituloManual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="38dp"
                android:layout_marginLeft="38dp"
                android:layout_marginTop="52dp"
                android:text="@string/titulo_manual"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvManualDisp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="38dp"
                android:layout_marginLeft="38dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="38dp"
                android:layout_marginRight="38dp"
                android:text="@string/manual_add_disp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTituloManual" />

            <ImageView
                android:id="@+id/imgManualDisp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvManualDisp"
                app:srcCompat="@drawable/im_manual_disp" />

            <TextView
                android:id="@+id/tvManualEnuso"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="38dp"
                android:layout_marginLeft="38dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="38dp"
                android:layout_marginRight="38dp"
                android:text="@string/manual_add_enuso"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgManualDisp" />

            <ImageView
                android:id="@+id/imgManualEnuso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvManualEnuso"
                app:srcCompat="@drawable/im_manual_enuso" />

            <TextView
                android:id="@+id/tvManualPausar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="38dp"
                android:layout_marginLeft="38dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="38dp"
                android:layout_marginRight="38dp"
                android:text="@string/manual_pausarmasc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgManualEnuso" />

            <ImageView
                android:id="@+id/imgManualDisp3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvManualPausar"
                app:srcCompat="@drawable/im_manual_pausar" />

            <TextView
                android:id="@+id/tvManualActivar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="38dp"
                android:layout_marginLeft="38dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="38dp"
                android:layout_marginRight="38dp"
                android:text="@string/manual_activarmasc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgManualDisp3" />

            <ImageView
                android:id="@+id/imgManualActivar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvManualActivar"
                app:srcCompat="@drawable/im_manual_activar" />

            <TextView
                android:id="@+id/tvManualLavar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="38dp"
                android:layout_marginLeft="38dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="38dp"
                android:layout_marginRight="38dp"
                android:text="@string/manual_lavarmasc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgManualActivar" />

            <ImageView
                android:id="@+id/imgManualLavar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvManualLavar"
                app:srcCompat="@drawable/im_manual_lavar" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>